fixed link spacing

--- a/mobile.css
+++ b/mobile.css
@@ -129,6 +129,8 @@ p {
 
 a {
     text-decoration: none;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 footer {
